@@ -1,5 +1,8 @@
 2008-06-21	Diego Ongaro <ongardie@gmail.com>
 
+	* panel-plugin/datetime.c: Fix Bug #4157 - updates occur once a second
+	when datetime plugin shows date only. Used code from Steve Tyler's
+	Attachment #1697 in Bug #4145.
 	* panel-plugin/datetime-dialog.c, panel-plugin/datetime.h: Change
 	order of layout dropdown (Bug #4158)
 
